feat: adds UI with card functionality

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,27 @@
 </head>
 <body>
   <h1>Dad Joke Dadabase</h1>
+
+  <div class="project">
+    <h2 class="jokeContent"></h2>
+    <div class="rateThisJokeContainer">
+      <p>Rate this joke:</p>
+      <div class="rateThisJokeOptions">
+        <span class="formGroup"><input type="radio" id="score-1" name="yourRating" value="1" /><label for="score-1">1</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-2" name="yourRating" value="2" /><label for="score-2">2</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-3" name="yourRating" value="3" /><label for="score-3">3</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-4" name="yourRating" value="4" /><label for="score-4">4</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-5" name="yourRating" value="5" /><label for="score-5">5</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-6" name="yourRating" value="6" /><label for="score-6">6</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-7" name="yourRating" value="7" /><label for="score-7">7</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-8" name="yourRating" value="8" /><label for="score-8">8</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-9" name="yourRating" value="9" /><label for="score-9">9</label></span>
+        <span class="formGroup"></span><input type="radio" id="score-10" name="yourRating" value="10" /><label for="score-10">10</label></span>
+      </div>
+    </div>
+    <p class="averageRating">Average Rating: <span class="jokeRatingValue">7.8</span></p>
+    <button id="nextJoke">See Next Joke</button>
+</div>
   <script src="js/script.js"></script>
 </body>
 </html>
