feat: removes json-server locally and uses API from Heroku app

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Dad Joke Dadabase</title>
   <meta name="description" content="Where do you keep your dad jokes? In a dadabase of course!">
   <meta name="author" content="Tyler Hawkins">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
   <h1>Dad Joke Dadabase</h1>
@@ -31,6 +31,6 @@
     <p class="averageRating">Average Rating: <span class="jokeRatingValue">7.8</span></p>
     <button id="nextJoke">See Next Joke</button>
 </div>
-  <script src="js/script.js"></script>
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
